--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "0.14.24", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-serde = "1.0"
-hyper-tls = "0.5"
-serde_json = "1.0"
-jsonwebtoken = "7.2"
-log = "0.4"
-consul = "0.4.2"
+tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
+tokio-stream = "0.1.14"
 warp = "0.3"
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+futures = { version = "0.3", default-features = false }
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
+pretty_env_logger = "0.5.0"
