--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,5 +14,5 @@ serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 pretty_env_logger = "0.5.0"
-reqwest = { version = "0.11", features = ["blocking", "json", "custom"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
