--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,4 +15,6 @@ futures = { version = "0.3", default-features = false }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 pretty_env_logger = "0.5.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+openai = "1.0.0-alpha.13"
+dotenvy = "0.15.7"
 
