--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "rust-analyzer.linkedProjects": [
+        "./server/Cargo.toml",
+        "./server/Cargo.toml",
         "./server/Cargo.toml"
-    ]
+    ],
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
