--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,4 +17,6 @@ pretty_env_logger = "0.5.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 openai = "1.0.0-alpha.13"
 dotenvy = "0.15.7"
+config = { version = "0.13.4", features = ["toml"] }
+lazy_static = "1.4.0"
 
