--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -12,8 +12,6 @@ name: rust-clippy analyze
 on:
   push:
     branches: [ "develop" ]
-  schedule:
-    - cron: '37 9 * * 5'
 
 jobs:
   rust-clippy-analyze:
@@ -44,9 +42,10 @@ jobs:
           --all-features
           --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
         continue-on-error: true
+        working-directory: ./server
 
       - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: rust-clippy-results.sarif
           wait-for-processing: true
