--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -42,10 +42,11 @@ jobs:
           --all-features
           --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
         continue-on-error: true
-        working-directory: ./server
+        working-directory: ./path/to/your/directory
 
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ./rust-clippy-results.sarif
+          sarif_file: rust-clippy-results.sarif
           wait-for-processing: true
+          token: ${{ secrets.GITHUB_TOKEN }}
