--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,4 +20,4 @@ dotenvy = "0.15.7"
 config = { version = "0.13.4", features = ["toml"] }
 lazy_static = "1.4.0"
 async-trait = "0.1.74"
-
+rocket = { version = "0.5.0", features = ["json"] }
